--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -12,9 +12,10 @@
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Timer</h1>
-        <input type="text" id="datetime-picker" />
-        <button type="button" data-start>Start</button>
-
+        <div class="datetime-picker-container">
+          <input type="text" id="datetime-picker" />
+          <button type="button" data-start>Start</button>
+        </div>
         <div class="timer">
           <div class="field">
             <span class="value" data-days>00</span>
