--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <div class="container">
+      <div class="container timer-container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Timer</h1>
         <div class="datetime-picker-container">
