--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <div class="container">
+      <div class="container snackbar-container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Snackbar</h1>
         <form class="form">
